--- a/app/src/main/res/layout/activity_feed_screen.xml
+++ b/app/src/main/res/layout/activity_feed_screen.xml
@@ -15,7 +15,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:background="@drawable/toolbar"
         android:id="@+id/toolbar"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:paddingLeft="8dp"
         android:paddingRight="8dp">
 
@@ -41,17 +41,6 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/searchView"
-            android:src="@drawable/ic_baseline_search_24"/>
-
     </LinearLayout>
 
 
@@ -61,6 +50,7 @@
         android:id="@+id/recyclerView"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintLeft_toLeftOf="parent"
+        tools:listitem="@layout/custom_layout"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
