--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="@drawable/dividers">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -14,6 +14,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
             android:orientation="vertical">
 
             <TextView
@@ -31,21 +33,20 @@
                 android:lines="2"
                 android:text="Message"
                 android:textSize="18sp"
+                android:layout_marginTop="3dp"
                 android:id="@+id/message"/>
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
 
         <TextView
+            android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="17:20pm"
-            android:textSize="14sp"
-            android:id="@+id/time"/>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:textSize="14sp" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
