--- a/app/src/main/res/layout/activity_details_screen.xml
+++ b/app/src/main/res/layout/activity_details_screen.xml
@@ -110,19 +110,16 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/image"
                 android:layout_marginTop="12dp"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
-
-                    <androidx.appcompat.widget.AppCompatButton
+                    <Button
                         android:id="@+id/delete"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
@@ -130,14 +127,11 @@
                         android:drawableLeft="@drawable/ic_baseline_delete_24"
                         android:padding="8dp"
                         android:text="Delete"
+                        android:layout_margin="10dp"
                         android:textColor="@color/white" />
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
 
-                    <androidx.appcompat.widget.AppCompatButton
+                    <Button
                         android:id="@+id/download"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
@@ -145,12 +139,9 @@
                         android:drawableLeft="@drawable/ic_baseline_cloud_download_24"
                         android:padding="8dp"
                         android:text="Download"
+                        android:layout_margin="10dp"
                         android:textColor="@color/white" />
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
 
                 </LinearLayout>
 
@@ -160,15 +151,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
-
-
-                    <androidx.appcompat.widget.AppCompatButton
+                    <Button
                         android:id="@+id/copy"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
@@ -176,14 +162,10 @@
                         android:drawableLeft="@drawable/ic_baseline_content_copy_24"
                         android:padding="8dp"
                         android:text="Copy"
+                        android:layout_margin="10dp"
                         android:textColor="@color/white" />
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
-
-                    <androidx.appcompat.widget.AppCompatButton
+                    <Button
                         android:id="@+id/translate"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
@@ -191,12 +173,8 @@
                         android:drawableLeft="@drawable/ic_baseline_translate_24"
                         android:padding="8dp"
                         android:text="Translate"
+                        android:layout_margin="10dp"
                         android:textColor="@color/white" />
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
 
                 </LinearLayout>
 
