--- a/app/src/main/res/layout/activity_details_screen.xml
+++ b/app/src/main/res/layout/activity_details_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,12 +8,9 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/buttonLayout">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -80,109 +77,94 @@
                         android:layout_alignParentRight="true"
                         android:src="@drawable/twitter_white" />
 
-                    <TextView
-                        android:id="@+id/details"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/time"
-                        android:layout_marginTop="10dp"
-                        android:padding="8dp"
-                        android:text="Message......"
-                        android:textColor="@color/white"
-                        android:textSize="18sp" />
-
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/cardview"
+                android:layout_marginTop="10dp"
+                android:padding="8dp"
+                android:text="Message......"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
 
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_below="@+id/cardview"
+                android:layout_below="@+id/details"
                 android:layout_marginTop="12dp"
                 android:scaleType="centerCrop" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image"
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/delete"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_bg"
-                        android:drawableLeft="@drawable/ic_baseline_delete_24"
-                        android:padding="8dp"
-                        android:text="Delete"
-                        android:layout_margin="10dp"
-                        android:textColor="@color/white" />
-
-
-                    <Button
-                        android:id="@+id/download"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_bg"
-                        android:drawableLeft="@drawable/ic_baseline_cloud_download_24"
-                        android:padding="8dp"
-                        android:text="Download"
-                        android:layout_margin="10dp"
-                        android:textColor="@color/white" />
-
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/copy"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_bg"
-                        android:drawableLeft="@drawable/ic_baseline_content_copy_24"
-                        android:padding="8dp"
-                        android:text="Copy"
-                        android:layout_margin="10dp"
-                        android:textColor="@color/white" />
-
-                    <Button
-                        android:id="@+id/translate"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_bg"
-                        android:drawableLeft="@drawable/ic_baseline_translate_24"
-                        android:padding="8dp"
-                        android:text="Translate"
-                        android:layout_margin="10dp"
-                        android:textColor="@color/white" />
-
-                </LinearLayout>
-
-
-            </LinearLayout>
 
         </RelativeLayout>
 
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/buttonLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:background="@drawable/button_bg"
+            android:backgroundTint="@color/grey"
+            android:src="@drawable/ic_baseline_delete_24"
+            app:tint="@color/LightBlue"
+            android:layout_weight="1"
+            android:layout_margin="5dp" />
+
+
+        <ImageButton
+            android:id="@+id/download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:background="@drawable/button_bg"
+            android:backgroundTint="@color/grey"
+            android:src="@drawable/ic_baseline_cloud_download_24"
+            app:tint="@color/LightBlue"
+            android:layout_weight="1"
+            android:layout_margin="5dp" />
+
+
+        <ImageButton
+            android:id="@+id/copy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:background="@drawable/button_bg"
+            android:backgroundTint="@color/grey"
+            android:src="@drawable/ic_baseline_content_copy_24"
+            app:tint="@color/LightBlue"
+            android:layout_weight="1"
+            android:layout_margin="5dp" />
+
+        <ImageButton
+            android:id="@+id/translate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:background="@drawable/button_bg"
+            android:backgroundTint="@color/grey"
+            android:src="@drawable/ic_baseline_translate_24"
+            app:tint="@color/LightBlue"
+            android:layout_weight="1"
+            android:layout_margin="5dp" />
+
+    </LinearLayout>
+
+</RelativeLayout>
