--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -30,10 +30,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lines="2"
                 android:text="Message"
                 android:textSize="18sp"
                 android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
                 android:id="@+id/message"/>
         </LinearLayout>
 
