--- a/app/src/main/res/drawable/dividers.xml
+++ b/app/src/main/res/drawable/dividers.xml
@@ -7,7 +7,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#cdcdcd"/>
+            <solid android:color="#e5e5e5"/>
         </shape>
     </item>
     <item android:bottom="2dp">
