--- a/app/src/main/res/layout/activity_feed_screen.xml
+++ b/app/src/main/res/layout/activity_feed_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".clone.FeedScreen">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="?actionBarSize"
         android:orientation="horizontal"
@@ -22,26 +22,38 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Inbox"
-                android:textSize="14sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/email"
-                android:textSize="14sp"
+                android:text="kainatkhan1546@gmail.com"
                 android:textColor="@color/white"
-                android:text="kainatkhan1546@gmail.com"/>
+                android:textSize="14sp" />
 
         </LinearLayout>
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:padding="12sp"
+            android:src="@drawable/ic_baseline_refresh_24"
+            app:tint="@color/white"
+            android:background="@color/LightBlue" />
+
+    </RelativeLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
