--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -14,12 +14,12 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="3dp"
             android:layout_toLeftOf="@id/time"
-            android:layout_alignParentLeft="true"
             android:padding="4dp"
             android:text="Linkdin"
             android:textColor="@color/black"
@@ -45,15 +45,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:text="17:20pm"
-            android:padding="4dp"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="10dp"
+            android:padding="4dp"
+            android:text="17:20pm"
             android:textSize="14sp" />
 
     </RelativeLayout>
 
     <View
+        android:id="@+id/line1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#939393"
